--- a/WebContent/resources/css/member.css
+++ b/WebContent/resources/css/member.css
@@ -1,54 +1,20 @@
 @CHARSET "UTF-8";
-div.box{padding-top:50px; margin: 0 auto;width: 600px;text-align: center;}
-#header {
-    background-color:black;
-    color:white;
-    text-align:center;
-    padding:5px;
+#member_detail{border: 1px solid gray;width:100%;height:400px;margin:0 auto; border-collapse: collapse;}
+#member_detail tr{border: 1px solid gray;hetigh:20%}
+#member_detail tr td{border: 1px solid gray;}
+.font_bold{font-weght:bold;}
+.bg_color_yellow{background-color: yellow}
+table#member_list {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
 }
-#section {
-    width:350px;
-    float:left;
-    padding:10px;
+table#member_list td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
-#footer {
-    background-color:black;
-    color:white;
-    clear:both;
-    text-align:center;
-    padding:5px;
-}
-#nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-#nav li {
-    float: left;
-    border-right:1px solid #bbb;
-    display: inline;
-}
-#nav li:last-child {
-    border-right: none;
-}
-#nav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-#nav li a:hover:not(.active) {
-    background-color: #111;
-}
-#nav .active {
-    background-color: #4CAF50;
-}
-.bottom {
-   position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 50px;
+
+tr :nth-child(even){
+	background-color:#dddddd;
 }
