--- a/WebContent/resources/css/global.css
+++ b/WebContent/resources/css/global.css
@@ -1,5 +1,5 @@
 @CHARSET "UTF-8";
-div.box{padding-top:50px; margin: 0 auto;width: 600px;text-align: center;}
+.box{padding-top:50px; margin: 0 auto;width: 600px;text-align: center;}
 #header {
     background-color:black;
     color:white;
@@ -46,9 +46,21 @@ div.box{padding-top:50px; margin: 0 auto;width: 600px;text-align: center;}
 #nav .active {
     background-color: #4CAF50;
 }
-.bottom {
-  /*  position: absolute; */
+/* .bottom {
+   position: absolute;
 	bottom: 0;
 	width: 100%;
 	height: 50px;
+} */
+#browsefooter {
+    background-color:#000000;
+    color:#999;
+    clear:both;
+    text-align:left;
+}
+.bottom {
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	height: 70px;
 }
